[package]
name = "logmap"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier.bouvier@epfl.ch>"]
description = "A concurrent hashmap using a log for buckets"
homepage = "https://github.com/SonicFrog/fictional-engine"
license = "MIT"

[dependencies]
"owning_ref" = "0.3.3"
"abox" = "0.4.0"

[dev-dependencies]
"rand" = "0.5.0-pre.0"
"time" = "0.1.39"
"crossbeam-utils" = "0.3.2"
"core_affinity" = "0.5.9"
